@@ -3,6 +3,8 @@
 
 Version 8.0.9
 
+  - Fix for Bug#26748909, MASTER : ERROR - NO OPERATIONS ALLOWED AFTER STATEMENT CLOSED FOR TOSTRING().
+
   - Fix for Bug#26266731, CONCUR_UPDATABLE RESULTSET OPERATIONS FAIL AGAINST 8.0 FOR BOOLEAN COLUMN.
 
   - WL#11239, DevAPI: Remove create table implementation.
